# chiseled

./: LICENSE  README.md
.github/workflows/: release.yml
app/: .cursorrules  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: hotkey.rs  lib.rs  tray.rs
app/src-tauri/src/mapping/: affix_map.rs  base_type_map.rs  mod.rs  mod_pattern_map.rs
app/src-tauri/src/model/: mod.rs  trade_filter.rs  trade_query.rs  trade_result.rs
app/src-tauri/src/service/: mod.rs  trade_api.rs
app/src/lib/: TradeMacro.svelte
app/src/lib/components/: FilterGroup.svelte  FilterRow.svelte  LockableCheckbox.svelte  PriceFilter.svelte  RangeFilter.svelte  RangeInputs.svelte  SearchResults.svelte  StatFilter.svelte  TextFilter.svelte  ToggleFilter.svelte
app/src/lib/types/: filters.ts
app/src/routes/: +page.svelte
