[package]
name = "chiseled-poe-trade"
version = "0.3.1"
description = "price check items in POE2"
authors = ["nuttymode"]
license = "MIT"
repository = "https://github.com/nuttymode/chiseled-poe-trade"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-log = "2.0.0-rc"
reqwest = { version = "0.11", features = ["json", "blocking"] }
regex = "1.5"
once_cell = "1.18"
tauri-plugin-global-shortcut = "2.2.0"
tauri-plugin-clipboard-manager = "2.2.0"
windows = { version = "0.48", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging"
] }
tauri-plugin-dialog = "2"
dirs = "6.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
test-log = "0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
